...
    <!-- RelativeLayout ensures that the BottomNavigationView stays at the bottom -->

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollView"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:layout_alignParentTop="true"
        android:background="@color/bg">

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_math"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame2"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_memory"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewGame3"
                    android:layout_width="375dp"
                    android:layout_height="150dp"
                    android:background="@drawable/game_background"
                    android:src="@drawable/game_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
