...
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!-- Easy Game Mode -->
        <RadioButton
            android:id="@+id/btnEasy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Easy"
            android:background="@drawable/easy_button"
...
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <!-- Play Now Button -->
    <Button
        android:id="@+id/btnPlayNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
...
